tests/ui/bitfield/field_value_out_of_bounds_signed_8_1_i16.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_8_1_i16.rs:6:36
  |
6 | struct BitField(#[field(size = 1)] Field);
  |                                    ^^^^^ the evaluated program panicked at 'Size of the field type exceeds the specified field size of 1 bit', $DIR/tests/ui/bitfield/field_value_out_of_bounds_signed_8_1_i16.rs:6:36
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the variant or associated item `_bitfield_extract_primitive` exists for enum `Field`, but its trait bounds were not satisfied
  --> tests/ui/bitfield/field_value_out_of_bounds_signed_8_1_i16.rs:6:36
   |
6  | struct BitField(#[field(size = 1)] Field);
   |                                    ^^^^^ variant or associated item cannot be called on `Field` due to unsatisfied trait bounds
...
10 | enum Field {
   | ---------- doesn't satisfy 6 bounds
   |
note: the following trait bounds were not satisfied:
      `&Field: TryFrom<i8>`
      `&Field: TryFrom<u8>`
      `&mut Field: TryFrom<i8>`
      `&mut Field: TryFrom<u8>`
      `<&Field as TryFrom<i8>>::Error = i8`
      `<&Field as TryFrom<u8>>::Error = u8`
      `<&mut Field as TryFrom<i8>>::Error = i8`
      `<&mut Field as TryFrom<u8>>::Error = u8`
      `<Field as TryFrom<i8>>::Error = i8`
      `<Field as TryFrom<u8>>::Error = u8`
      `Field: TryFrom<i8>`
      `Field: TryFrom<u8>`
  --> tests/ui/bitfield/field_value_out_of_bounds_signed_8_1_i16.rs:6:32
   |
6  | struct BitField(#[field(size = 1)] Field);
   |                                ^^^^^^^^^
   |                                |
   |                                unsatisfied trait bound introduced here
note: the trait `TryFrom` must be implemented
  --> /builddir/build/BUILD/rustc-1.86.0-src/library/core/src/convert/mod.rs:681:1
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `_bitfield_extract_primitive`, perhaps you need to implement one of them:
           candidate #1: `BitFieldExtractionSigned`
           candidate #2: `BitFieldExtractionUnsigned`
